--- a/04_contentprovider/src/main/AndroidManifest.xml
+++ b/04_contentprovider/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0.0">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="BookProvider"
