--- a/06_controls/src/main/AndroidManifest.xml
+++ b/06_controls/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zxn.intent"
-    android:versionCode="1"
-    android:versionName="1.0.0" >
-
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+    package="com.zxn.controls" >
 
     <application
         android:allowBackup="true"
@@ -16,14 +12,8 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".BasicViewActivity"
-            android:label="Basic View Tests" >
-            <intent-filter>
-                <action android:name="com.zxn.intent.action.ShowBasicView" />
-                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
